# nlp-deployment

./: README.md  app-carlo.py  app.py  nlp-carlo.ipynb  nlp.ipynb  pyproject.toml
models/: vectorizer.pkl
