[tool.poetry]
name = "nlp-deployment"
version = "1.0.0"
description = ""
authors = ["eccecarreon <153371886+eccecarreon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
nltk = "^3.9.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
